...
                .semantics { heading() },
          )
        },
        navigationIcon = {
          IconButton(
            onClick = { stepBack() },
            modifier = Modifier.testTag("playerBackButton"),
          ) {
            Icon(
              imageVector = Icons.AutoMirrored.Outlined.ArrowBack,
              contentDescription = null,
              tint = colorScheme.onSurface,
            )
...
    modifier = Modifier.systemBarsPadding(),
    content = { innerPadding ->
      if (twoPane) {
        Row(
          modifier =
            Modifier
              .testTag("playerScreen")
              .padding(innerPadding)
              .fillMaxSize(),
        ) {
          PlayerArtworkAndControlsWide(
            isPlaybackReady = isPlaybackReady,
            playingBook = playingBook,
...
              context = context,
            ),
          style = typography.bodyMedium,
          color = colorScheme.onBackground.copy(alpha = 0.6f),
          maxLines = 1,
          overflow = TextOverflow.Ellipsis,
          modifier = Modifier.testTag("playerChapterNumber"),
        )
      } else {
        ChapterNumberPlaceholder(modifier = Modifier.testTag("playerChapterNumber"))
      }
    }
  }
...
