...
    )
  }

  Column(
    modifier =
      modifier
        .testTag("chapterList")
        .fillMaxSize()
        .withScrollbar(
          state = listState,
          color = colorScheme.onBackground.copy(alpha = scrollbarAlpha),
          totalItems = showingChapters.size,
          ignoreItems = emptyList(),
...
